# photo-sorter

./: README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cache.rs  commands.rs  io.rs  lib.rs  metadata.rs  scanner.rs  wal.rs
src/components/: PathInput.tsx  PreviewPanel.tsx  ProgressOverlay.tsx
src/components/PathInput/: DescendantBlockedDialog.tsx  ParentFolderConflictDialog.tsx  PathRow.tsx
src/components/PreviewPanel/: DayPane.tsx  FilePane.tsx  YearPane.tsx
src/components/ui/: button.tsx  progress.tsx
src/hooks/: useOrganizer.ts  useTheme.ts
src/lib/: ipc.ts  pathHierarchy.ts  previewContributions.ts
