[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
jwalk = "0.8"
kamadak-exif = "0.6.1"
rayon = "1.12.0"
chrono = { version = "0.4.44", features = ["serde"] }
tauri-plugin-dialog = "2.7.0"
dirs = "6.0.0"
phf = { version = "0.11", features = ["macros"] }
dashmap = "6"
sled = "0.34"

